# freezedry-protocol

./: .gitignore  .mocharc.yml  Anchor.toml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.test.json
.githooks/: pre-commit  pre-push
docs/: error-codes.md  protocol-spec.md  sdk-tests.md
docs/gitbook/: README.md  SUMMARY.md
docs/gitbook/nodes/: deployment-modes.md  getting-started.md  peer-auth.md
docs/gitbook/programs/: jobs.md
docs/gitbook/protocol/: auth.md  blob-format.md  economics.md  memo-format.md
docs/gitbook/sdk/: quickstart.md  registry.md
examples/: inscribe-marketplace.html  inscribe.html  voucher-redeem.html
programs/blip-registry/src/: state.rs
programs/blip-registry/src/instructions/: register.rs  update_username.rs
programs/fd-pointer/: Cargo.toml
programs/fd-pointer/idl/: fd_pointer.json
programs/fd-pointer/src/: error.rs  events.rs  lib.rs  state.rs  util.rs
programs/fd-pointer/src/instructions/: create_pointer.rs  create_pointer_v2.rs  link_nft.rs  migrate_pointer_account.rs  mod.rs  set_collection.rs  transfer_inscriber.rs  update_last_sig.rs
programs/inscription-jobs/: Cargo.toml
programs/inscription-jobs/src/: error.rs  lib.rs  state.rs
programs/inscription-jobs/src/instructions/: admin_close_attestation.rs  admin_close_job.rs  attest.rs  cancel_job.rs  claim_job.rs  close_attestation.rs  close_completed_job.rs  close_config.rs  close_referrer.rs  create_job.rs  initialize.rs  mod.rs  refund_expired.rs  register_referrer.rs  release_payment.rs  requeue_expired.rs  submit_receipt.rs  transfer_authority.rs  update_config.rs
programs/node-registry/: Cargo.toml
programs/node-registry/src/: error.rs  lib.rs  state.rs
programs/node-registry/src/instructions/: deregister_node.rs  heartbeat.rs  initialize_config.rs  mod.rs  register_node.rs  update_config.rs  update_node.rs  verify_stake.rs
programs/pod/: Cargo.toml
programs/pod/src/: error.rs  lib.rs  state.rs
programs/pod/src/instructions/: finalize_epoch.rs  initialize_config.rs  mod.rs  submit_receipt.rs  update_config.rs
scripts/: batch-migrate-pointers.mjs  cargo-pin-edition2024.sh  devnet-post-migrate-test.mjs  devnet-smoke-v2.mjs  push-public.sh  verify-v1-compat.mjs
tests/: fd-pointer.ts  inscription-jobs.ts  node-registry.ts  pod.ts  property-title.ts
tools/: README.md  dehydrate.html  freezedry-standalone.html  hydrate.html
