[workspace]
members = [
    "programs/blip-registry",
    "programs/fd-pointer",
    "programs/inscription-jobs",
    "programs/node-registry",
    "programs/pod",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
