[workspace]
members = [
    "programs/fd-pointer",
]
exclude = [
    "programs/blip-registry",
    "programs/inscription-jobs",
    "programs/node-registry",
    "programs/pod",
    "programs-next/inscription-jobs-v3",
    "programs-next/node-registry-v2",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
