[package]
name = "fd-pointer"
version = "0.1.0"
description = "Freeze Dry Protocol — Immutable on-chain pointer PDAs for inscription discovery"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fd_pointer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
solana-security-txt = "1.1.1"
