[package]
name = "fd-pointer"
version = "0.1.0"
description = "Freeze Dry Protocol — Immutable on-chain pointer PDAs for inscription discovery"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fd_pointer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
solana-security-txt = "1.1.1"
# Note: no dev-dependencies here. proptest was evaluated but pulls in
# wit-bindgen 0.51.0 transitively (via rand 0.9 → rand_core → getrandom →
# wasip2+3 → wit-bindgen-rust-macro which is edition2024), and Solana's
# Docker toolchain (rust 1.79) can't parse edition2024 crates. Rust-side
# fuzz coverage is provided by deterministic #[test] functions in util.rs
# (11 regression cases); TS fast-check in tests/property-title.ts covers
# the property-based inputs (~12k random inputs). If a future Rust proptest
# approach is needed, wait for Solana platform-tools to ship rust 1.85+ OR
# pin proptest to a pre-rand-0.9 version (1.5.x era) in a separate test
# workspace that isn't part of the mainnet build dep graph.
