[package]
name = "freezedry-jobs"
version = "0.1.0"
description = "Freeze Dry Protocol — On-chain inscription job marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "freezedry_jobs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
