[package]
name = "freezedry-registry"
version = "0.1.0"
description = "Freeze Dry Protocol — On-chain node registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "freezedry_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
